--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,11 @@ figcaption {
 
 .clearfix:after {
   content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
 }
 
 [class*="col-"] {
