--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@ video, audio, img {
 
 /* layout */
 
+section {
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
 .wrapper {
   width: 960px;
   margin: 0 auto;
