automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,8 @@ video, audio, img {
 /* layout */
 
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
