--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,13 @@ video, audio, img {
   z-index: 1;
 }
 
+#social a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: yellow;
+}
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
