--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,15 @@ video, audio, img {
 
 /* layout */
 
+header {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  background: #fff;
+  z-index: 1;
+}
+
 #social {
   position: fixed;
   top: 200px;
